tests/ui/derive/fail_app_enum_alias_collision.rs
#[derive(Clone, Debug, PartialEq, Eq, foundry::AppEnum)]
enum Status {
    #[foundry(aliases = ["legacy"])]
    Active,
    #[foundry(key = "legacy")]
    Archived,
}

fn main() {}
